 * Fix: Ensure that the legacy dropdown options, when closed, do not get accidentally clicked by other interactions wide viewports (CheesyPhoenix, Christer Jensen)
 * Fix: Add a fallback background for the editing preview iframe for sites without a background (Ian Price)
 * Fix: Preserve whitespace in rendered comments (Elhussein Almasri)
 * Docs: Document, for contributors, the use of translate string literals passed as arguments to tags and filters using `_()` within templates (Chiemezuo Akujobi)
 * Maintenance: Update BeautifulSoup upper bound to 4.12.x (scott-8)
 * Maintenance: Migrate initialization of classes (such as `body.ready`) from multiple JavaScript implementations to one Stimulus controller `w-init` (Chiemezuo Akujobi)
 * Maintenance: Adopt the usage of of translate string literals using `arg=_('...')` in all `wagtailadmin` module templates (Chiemezuo Akujobi)
 * Maintenance: Migrate the contrib styleguide index view to a class-based view (Chiemezuo Akujobi)
 * Maintenance: Update djhtml to 3.0.6 (Matt Westcott)
 * Maintenance: Migrate the contrib settings edit view to a class-based view (Chiemezuo Akujobi, Sage Abdullah)


5.2.1 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~

 * Fix: Add a fallback background for the editing preview iframe for sites without a background (Ian Price)
 * Docs: Fix code example for `{% picture ... as ... %}` template tag (Rezyapkin)


5.2 LTS (01.11.2023)
~~~~~~~~~~~~~~~~~~~~

 * Redesigned page listing view (Ben Enright, Matt Westcott, Thibaud Colas, Sage Abdullah)
 * Support OpenSearch as an alternative to Elasticsearch (Matt Westcott)
 * Add support for Python 3.12 (Matt Westcott)
 * Add preview-aware and page-aware fragment caching template tags, `wagtailcache` & `wagtailpagecache` (Jake Howard)
 * Always set help text element ID for form fields with help text in `field.html` template (Sage Abdullah)
 * Move `SnippetViewSet` menu registration mechanism to base `ViewSet` class (Sage Abdullah)