@@ -23,6 +23,7 @@ depth: 1
  * Ensure that the legacy dropdown options, when closed, do not get accidentally clicked by other interactions wide viewports (CheesyPhoenix, Christer Jensen)
  * Add a fallback background for the editing preview iframe for sites without a background (Ian Price)
  * Preserve whitespace in rendered comments (Elhussein Almasri)
+ * Remove search logging from project template so that new projects without the search promotions module will not error (Matt Westcott)
 
 ### Documentation
 
