@@ -2,7 +2,13 @@ from django.core.paginator import EmptyPage, PageNotAnInteger, Paginator
 from django.template.response import TemplateResponse
 
 from wagtail.models import Page
-from wagtail.search.models import Query
+
+# To enable logging of search queries for use with the "Promoted search results" module
+# <https://docs.wagtail.org/en/stable/reference/contrib/searchpromotions.html>
+# uncomment the following line and the lines indicated in the search function
+# (after adding wagtail.contrib.search_promotions to INSTALLED_APPS):
+
+# from wagtail.contrib.search_promotions.models import Query
 
 
 def search(request):
@@ -12,10 +18,12 @@ def search(request):
     # Search
     if search_query:
         search_results = Page.objects.live().search(search_query)
-        query = Query.get(search_query)
 
-        # Record hit
-        query.add_hit()
+        # To log this query for use with the "Promoted search results" module:
+
+        # query = Query.get(search_query)
+        # query.add_hit()
+
     else:
         search_results = Page.objects.none()
 
