@@ -10,6 +10,7 @@ Changelog
  * Fix: Ensure that the legacy dropdown options, when closed, do not get accidentally clicked by other interactions wide viewports (CheesyPhoenix, Christer Jensen)
  * Fix: Add a fallback background for the editing preview iframe for sites without a background (Ian Price)
  * Fix: Preserve whitespace in rendered comments (Elhussein Almasri)
+ * Fix: Remove search logging from project template so that new projects without the search promotions module will not error (Matt Westcott)
  * Docs: Document, for contributors, the use of translate string literals passed as arguments to tags and filters using `_()` within templates (Chiemezuo Akujobi)
  * Maintenance: Update BeautifulSoup upper bound to 4.12.x (scott-8)
  * Maintenance: Migrate initialization of classes (such as `body.ready`) from multiple JavaScript implementations to one Stimulus controller `w-init` (Chiemezuo Akujobi)
